Make to work with VLAAH 2G API.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 </head> 
 <body> 
 <h1>VLAAH Embed</h1>
-<p>만든이: <a href="http://heungsub.net/">이흥섭</a></p>
+<p>만든이: <a href="http://sublee.kr/">이흥섭</a></p>
+
+<a href="http://github.com/lunant/vlaah-embed"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://assets0.github.com/img/abad93f42020b733148435e2cd92ce15c542d320?repo=&url=http%3A%2F%2Fs3.amazonaws.com%2Fgithub%2Fribbons%2Fforkme_right_green_007200.png&path=" alt="Fork me on GitHub"></a>
 
 <h2 id="variables">변수</h2>
 <p>변수는 스크립트 주소에 QueryString으로 전달하거나
